# AvatarEmojiBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
app/: bot.py  main.py  utils.py
app/functions/: _emoji.py  emoji_sets.py
app/handlers/: handlers.py  utils.py
